force-app/main/default/objects/ObsoletedPaymentTermItem__c/ObsoletedPaymentTermItem__c.object-meta.xml
<CustomObject>
    <label>Obsoleted Payment Term It</label>
    <nameField>
        <label>Payment Term Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obsoleted Payment Term Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>