force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Average_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Installment_Amount__c</fullName>
    <formula>IF(
    No_of_Installment__c &gt; 0,
     Total_Installment_Amount__c /  No_of_Installment__c ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>