force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Average_Installment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Average_Installment_Percent__c</fullName>
    <formula>IF(
     No_of_Installment__c  &gt; 0,
     Total_Installment_Percent__c /  No_of_Installment__c ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Installment Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>