force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Contract_Percent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Percent__c</fullName>
    <label>Contract Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>