force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <formula>&quot;On the &quot; &amp; TEXT( Payment_Term_Master__r.DueDate__c ) &amp; &quot;th of Every Month&quot;</formula>
    <label>Due Date</label>
    <type>Text</type>
</CustomField>