force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/No_of_Installment__c.field-meta.xml
<CustomField>
    <fullName>No_of_Installment__c</fullName>
    <formula>Payment_Term_Master__r.NoofInstallment__c</formula>
    <label>No. of Installment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>