force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Payment_Term_Master__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term Master Name</label>
    <referenceTo>PaymentTermMaster__c</referenceTo>
    <relationshipName>Payment_Term_Items</relationshipName>
    <type>Lookup</type>
</CustomField>