force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>Payment_Term_Master__r.Project__r.Name</formula>
    <label>Project</label>
    <type>Text</type>
</CustomField>