force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Total_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Installment_Amount__c</fullName>
    <label>Total Installment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>