force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Total_Installment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Installment_Percent__c</fullName>
    <label>Total Installment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>