force-app/main/default/objects/ObsoletedPaymentTermItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Text( Payment_Term_Master__r.Type__c )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>