force-app/main/default/objects/ObsoletedPaymentTermItem__c/validationRules/ContractAmountAndPercent.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractAmountAndPercent</fullName>
    <active>true</active>
    <description>If Contract Amount is entered, Contract Percent must be empty</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Contract_Amount__c )),
    NOT(ISBLANK( Contract_Percent__c ))
)</errorConditionFormula>
    <errorMessage>If Contract Amount is entered, Contract Percent must be empty.</errorMessage>
</ValidationRule>