force-app/main/default/objects/ObsoletedPaymentTermItem__c/validationRules/Installment_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Installment_Validation</fullName>
    <active>true</active>
    <description>To ensure Total Installment Amount and Percent cannot be entered if Number of Installments is zero.</description>
    <errorConditionFormula>AND(
     No_of_Installment__c = 0,
    OR(
        NOT(ISBLANK( Total_Installment_Amount__c )),
        NOT(ISBLANK( Total_Installment_Percent__c ))
    )
)</errorConditionFormula>
    <errorMessage>If the Number of Installments is 0, you cannot enter values for Total Installment Amount and Total Installment Percent.</errorMessage>
</ValidationRule>