force-app/main/default/objects/ObsoletedPaymentTermItem__c/validationRules/InstallmentAmountAndPercent.validationRule-meta.xml
<ValidationRule>
    <fullName>InstallmentAmountAndPercent</fullName>
    <active>true</active>
    <description>If Installment Amount is entered, Installment Percent must be empty</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(  Total_Installment_Amount__c )),
    NOT(ISBLANK(  Total_Installment_Percent__c ))
)</errorConditionFormula>
    <errorMessage>If Installment Amount is entered, Installment  Percent must be empty.</errorMessage>
</ValidationRule>